tests/invalid/invalid-annotation-target.orgs
stateflow InvalidAnnotationTarget

  @owner "ops"
  states
    draft
